Add path to root for additional css files in handlebar template
This change ensures that additional css files are correctly sourced and apply to all pages, regardless of their location in the book's folder structure.

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -27,7 +27,7 @@
 
         <!-- Custom theme stylesheets -->
         {{#each additional_css}}
-        <link rel="stylesheet" href="{{ this }}">
+        <link rel="stylesheet" href="{{ path_to_root }}/{{ this }}">
         {{/each}}
 
         {{#if mathjax_support}}
