--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -27,7 +27,7 @@
 
         <!-- Custom theme stylesheets -->
         {{#each additional_css}}
-        <link rel="stylesheet" href="{{ path_to_root }}/{{ this }}">
+        <link rel="stylesheet" href="/{{ this }}">
         {{/each}}
 
         {{#if mathjax_support}}
