--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -113,9 +113,9 @@
                             <a href="{{ path_to_root }}print.html" title="Print this book" aria-label="Print this book">
                                 <i id="print-button" class="fa fa-print"></i>
                             </a>
-                            {{#if git-repository-url}}
-                            <a href="{{git-repository-url}}" title="Git repository" aria-label="Git repository">
-                                <i id="github-button" class="fa fa-git"></i>
+                            {{#if git_repository_url}}
+                            <a href="{{git_repository_url}}" title="Git repository" aria-label="Git repository">
+                                <i id="git-repository-button" class="fa {{git_repository_icon}}"></i>
                             </a>
                             {{/if}}
                         </div>
