Change overflow-x to initial
Change overflow-x from auto to initial.
This resolves weird rendering behavior in Chrome and Safari on macOS.

With help from @bash

Co-authored-by: Ruben Schmidmeister <ruben.schmidmeister@icloud.com>

--- a/src/theme/css/chrome.css
+++ b/src/theme/css/chrome.css
@@ -181,6 +181,7 @@ html:not(.sidebar-visible) #menu-bar:not(:hover).folded > #menu-bar-sticky-conta
     padding: 0.1em 0.3em;
     border-radius: 3px;
     color: var(--inline-code-color);
+    overflow-x: initial;
 }
 
 a:hover > .hljs {
