Use only relative font sizes
This replaces the only use of px for font-sizes by setting up a base
rem size on the root element in a way that is easy to calculate (1 rem =
10px) and scaling up according to browser settings.

--- a/src/theme/css/chrome.css
+++ b/src/theme/css/chrome.css
@@ -85,8 +85,8 @@ html:not(.sidebar-visible) #menu-bar:not(:hover).folded > #menu-bar-sticky-conta
 .menu-title {
     display: inline-block;
     font-weight: 200;
-    font-size: 20px;
-    line-height: 50px;
+    font-size: 2rem;
+    line-height: 5rem;
     text-align: center;
     margin: 0;
     flex: 1;
