Change overflow-x to initial (#818)
Change overflow-x from auto to initial.
This resolves weird rendering behavior in Chrome and Safari on macOS.

With help from @bash

Co-authored-by: Ruben Schmidmeister <ruben.schmidmeister@icloud.com>

--- a/src/theme/css/chrome.css
+++ b/src/theme/css/chrome.css
@@ -184,6 +184,7 @@ html:not(.sidebar-visible) #menu-bar:not(:hover).folded > #menu-bar-sticky-conta
 
 :not(pre):not(a) > .hljs {
     color: var(--inline-code-color);
+    overflow-x: initial;
 }
 
 a:hover > .hljs {
