--- a/src/theme/css/general.css
+++ b/src/theme/css/general.css
@@ -34,10 +34,10 @@ h4, h5 { margin-top: 2em; }
     margin-top: 1em;
 }
 
-a.header:target h1:before,
-a.header:target h2:before,
-a.header:target h3:before,
-a.header:target h4:before {
+h1 a.header:target::before,
+h2 a.header:target::before,
+h3 a.header:target::before,
+h4 a.header:target::before {
     display: inline-block;
     content: "»";
     margin-left: -30px;
