--- a/src/theme/css/general.css
+++ b/src/theme/css/general.css
@@ -47,6 +47,7 @@ h4 a.header:target::before {
 .page {
     outline: 0;
     padding: 0 var(--page-padding);
+    margin-top: calc(0px - var(--menu-bar-height)); /* Compensate for the #menu-bar-hover-placeholder */
 }
 .page-wrapper {
     box-sizing: border-box;
