Hide chromes default active button outline

--- a/src/theme/css/chrome.css
+++ b/src/theme/css/chrome.css
@@ -49,6 +49,9 @@ a > .hljs {
     cursor: pointer;
     transition: color 0.5s;
 }
+.menu-bar button:focus {
+    outline: 0;
+}
 @media only screen and (max-width: 420px) {
     #menu-bar i, #menu-bar .icon-button {
         padding: 0 5px;
