--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -235,6 +235,12 @@
             window.playpen_line_numbers = true;
         </script>
         {{/if}}
+        
+        {{#if playpen_copyable}}
+        <script type="text/javascript">
+            window.playpen_copyable = true;
+        </script>
+        {{/if}}
 
         {{#if playpen_js}}
         <script src="{{ path_to_root }}ace.js" type="text/javascript" charset="utf-8"></script>
