Increases line height for p, ul & ol

--- a/src/theme/css/general.css
+++ b/src/theme/css/general.css
@@ -78,6 +78,9 @@ h4 a.header:target {
     margin-right: auto;
     max-width: var(--content-max-width);
 }
+.content p { line-height: 1.45em; }
+.content ol { line-height: 1.45em; }
+.content ul { line-height: 1.45em; }
 .content a { text-decoration: none; }
 .content a:hover { text-decoration: underline; }
 .content img { max-width: 100%; }
