--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -29,6 +29,7 @@
         <link rel="stylesheet" href="{{ path_to_root }}tomorrow-night.css">
         <link rel="stylesheet" href="{{ path_to_root }}ayu-highlight.css">
         <link rel="stylesheet" href="{{ path_to_root }}edge-dark-highlight.css">
+        <link rel="stylesheet" href="{{ path_to_root }}edge-light-highlight.css">
 
         <!-- Custom theme stylesheets -->
         {{#each additional_css}}
@@ -114,6 +115,7 @@
                             <li role="none"><button role="menuitem" class="theme" id="navy">{{ theme_option "Navy" }}</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="ayu">{{ theme_option "Ayu" }}</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="edge-dark">{{ theme_option "Edge Dark" }}</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="edge-light">{{ theme_option "Edge Light" }}</button></li>
                         </ul>
                         {{#if search_enabled}}
                         <button id="search-toggle" class="icon-button" type="button" title="Search. (Shortkey: s)" aria-label="Toggle Searchbar" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
