fontawesome upgrade to 5.13; incl free brand solid

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -33,8 +33,12 @@
         <link rel="stylesheet" href="{{ path_to_root }}css/print.css" media="print">
         {{/if}}
 
+        <!-- Font Awesome 5.13 free content -->
+        <link rel="stylesheet" href="{{ path_to_root }}FontAwesome/css/fontawesome.css">
+        <link rel="stylesheet" href="{{ path_to_root }}FontAwesome/css/brands.css">
+        <link rel="stylesheet" href="{{ path_to_root }}FontAwesome/css/solid.css">
+
         <!-- Fonts -->
-        <link rel="stylesheet" href="{{ path_to_root }}FontAwesome/css/font-awesome.css">
         {{#if copy_fonts}}
         <link rel="stylesheet" href="{{ path_to_root }}fonts/fonts.css">
         {{/if}}
