Add accidentally omitted query params

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -40,7 +40,7 @@
 
         {{#if mathjax_support}}
         <!-- MathJax -->
-        <script async type="text/javascript" src="{{ path_to_root }}mathjax.js"></script>
+        <script async type="text/javascript" src="{{ path_to_root }}mathjax.js?config=TeX-AMS-MML_HTMLorMML"></script>
         {{/if}}
     </head>
     <body>
