--- a/src/theme/fonts/fonts.css
+++ b/src/theme/fonts/fonts.css
@@ -96,6 +96,5 @@
   font-family: 'Source Code Pro';
   font-style: normal;
   font-weight: 500;
-  src: url('source-code-pro-v11-all-charsets-500.woff2') format('woff2'),
-       local('Source Code Pro Medium'), local('SourceCodePro-Medium');
+  src: url('source-code-pro-v11-all-charsets-500.woff2') format('woff2');
 }
