Add Bibliography with Bibtex-format support
Allows adding a bibliography in [BibTex format](http://www.bibtex.org/Format/) to your book and reference the citation keys in your markdown files.

Instructions have been added to the guide.

This is related to issue #1350

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -1,6 +1,16 @@
 <!DOCTYPE HTML>
 <html lang="{{ language }}" class="sidebar-visible no-js {{ default_theme }}">
     <head>
+        <style>
+        .hide {
+            display: none;
+        }
+
+        .bib_div:hover + .hide {
+            display: block;
+            color: green;
+        }
+        </style>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
         <title>{{ title }}</title>
