Enhanced contrast theme, for users with visual restrictions etc.
This adds a "contrast" theme, which (insofar as it can) makes mdBook's
output compliant with the W3C's WCAG ("Web Content Accessibility
Guidelines") https://www.w3.org/WAI/standards-guidelines/wcag/

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -43,6 +43,7 @@
         <link rel="stylesheet" href="{{ path_to_root }}highlight.css">
         <link rel="stylesheet" href="{{ path_to_root }}tomorrow-night.css">
         <link rel="stylesheet" href="{{ path_to_root }}ayu-highlight.css">
+        <link rel="stylesheet" href="{{ path_to_root }}contrast-highlight.css">
 
         <!-- Custom theme stylesheets -->
         {{#each additional_css}}
@@ -123,6 +124,7 @@
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
                             <li role="none"><button role="menuitem" class="theme" id="light">{{ theme_option "Light" }}</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="contrast">{{ theme_option "Contrast" }}</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="rust">{{ theme_option "Rust" }}</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">{{ theme_option "Coal" }}</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">{{ theme_option "Navy" }}</button></li>
