add font awesome v4 shims for compatibility

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -37,6 +37,7 @@
         <link rel="stylesheet" href="{{ path_to_root }}FontAwesome/css/fontawesome.css">
         <link rel="stylesheet" href="{{ path_to_root }}FontAwesome/css/brands.css">
         <link rel="stylesheet" href="{{ path_to_root }}FontAwesome/css/solid.css">
+        <link rel="stylesheet" href="{{ path_to_root }}FontAwesome/css/v4-shims.css">
 
         <!-- Fonts -->
         {{#if copy_fonts}}
