--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -34,9 +34,7 @@
         {{/if}}
 
         <!-- Font Awesome 5.13 free content -->
-        <link rel="stylesheet" href="{{ path_to_root }}FontAwesome/css/fontawesome.css">
-        <link rel="stylesheet" href="{{ path_to_root }}FontAwesome/css/brands.css">
-        <link rel="stylesheet" href="{{ path_to_root }}FontAwesome/css/solid.css">
+        <link rel="stylesheet" href="{{ path_to_root }}FontAwesome/css/all.css">
         <link rel="stylesheet" href="{{ path_to_root }}FontAwesome/css/v4-shims.css">
 
         <!-- Fonts -->
