--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -16,7 +16,9 @@
         {{> head}}
 
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <meta name="description" content="{{ description }}">
+        {{#if description}}<meta name="description" content="{{ description }}">{{/if}}
+        {{#if keywords}}<meta name="keywords" content="{{#each keywords}}{{lookup ../keywords @index}}, {{/each}}">{{/if}}
+        {{#if author}}<meta name="author" content="{{ author }}">{{/if}}
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
