--- a/src/theme/tomorrow-night.css
+++ b/src/theme/tomorrow-night.css
@@ -81,8 +81,14 @@
   overflow-x: auto;
   background: #1d1f21;
   color: #c5c8c6;
-  padding: 2em 0.5em;
+  padding: 0.5em;
   -webkit-text-size-adjust: none;
+}
+
+@media (max-width: 640px) {
+  .hljs {
+    padding-top: 2em;
+  }
 }
 
 .coffeescript .javascript,
