theme: Account for menu bar when scrolling to target
When navigating to a page with a fragment, the browser will scroll
such that the element with that id is at the top of the viewport,
but that's also where the menubar is.

`scroll-padding-top` tells the browser to scroll just a little bit
less, so that the target isn't obscured by the menu bar.

--- a/src/theme/css/chrome.css
+++ b/src/theme/css/chrome.css
@@ -20,6 +20,9 @@ a > .hljs {
 
 /* Menu Bar */
 
+html {
+  scroll-padding-top: var(--menu-bar-height);
+}
 #menu-bar,
 #menu-bar-hover-placeholder {
     z-index: 101;
