Make Google Analytics compliant to GDPR without cookie consent

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -250,6 +250,7 @@
                 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
                 ga('create', '{{google_analytics}}', 'auto');
+                ga('set', 'anonymizeIp', true);
                 ga('send', 'pageview');
             }
         </script>
