--- a/src/theme/css/syntax/ayu.css
+++ b/src/theme/css/syntax/ayu.css
@@ -3,135 +3,108 @@
  */
 
 .syn-code {
- color: #c5c8c6;
- background-color: #1d1f21;
+ color: #ffee99;
 }
 
-.syn-variable.syn-parameter.syn-function {
- color: #c5c8c6;
-}
 .syn-comment, .syn-punctuation.syn-definition.syn-comment {
- color: #969896;
+ color: #5c6773;
 }
 .syn-punctuation.syn-definition.syn-string, .syn-punctuation.syn-definition.syn-variable, .syn-punctuation.syn-definition.syn-string, .syn-punctuation.syn-definition.syn-parameters, .syn-punctuation.syn-definition.syn-string, .syn-punctuation.syn-definition.syn-array {
- color: #c5c8c6;
+ color: #5c6773;
 }
 .syn-none {
- color: #c5c8c6;
+ color: #5c6773;
 }
 .syn-keyword.syn-operator {
- color: #c5c8c6;
+ color: #5c6773;
 }
 .syn-keyword {
- color: #b294bb;
+ color: #ff7733;
 }
 .syn-variable {
- color: #cc6666;
+ color: #ff7733;
 }
 .syn-entity.syn-name.syn-function, .syn-meta.syn-require, .syn-support.syn-function.syn-any-method {
- color: #81a2be;
+ color: #36a3d9;
 }
 .syn-entity.syn-name.syn-label {
- color: #a3685a;
+ color: #ffee99;
 }
 .syn-support.syn-class, .syn-entity.syn-name.syn-class, .syn-entity.syn-name.syn-type.syn-class {
- color: #f0c674;
+ color: #ffee99;
 }
 .syn-meta.syn-class {
- color: #ffffff;
+ color: #ffee99;
 }
 .syn-keyword.syn-other.syn-special-method {
- color: #81a2be;
+ color: #36a3d9;
 }
 .syn-storage {
- color: #b294bb;
+ color: #ff7733;
 }
 .syn-support.syn-function {
- color: #8abeb7;
+ color: #36a3d9;
 }
 .syn-string, .syn-constant.syn-other.syn-symbol, .syn-entity.syn-other.syn-inherited-class {
- color: #b5bd68;
+ color: #b8cc52;
 }
 .syn-constant.syn-numeric {
- color: #de935f;
+ color: #ffee99;
 }
 .syn-none {
- color: #de935f;
+ color: #ffee99;
 }
 .syn-none {
- color: #de935f;
+ color: #ffee99;
 }
 .syn-constant {
- color: #de935f;
+ color: #ffee99;
 }
 .syn-entity.syn-name.syn-tag {
- color: #cc6666;
+ color: #00568d;
 }
 .syn-entity.syn-other.syn-attribute-name {
- color: #de935f;
+ color: #ff7733;
 }
 .syn-entity.syn-other.syn-attribute-name.syn-id, .syn-punctuation.syn-definition.syn-entity {
- color: #81a2be;
+ color: #ff7733;
 }
 .syn-meta.syn-selector {
- color: #b294bb;
+ color: #ff7733;
 }
 .syn-none {
- color: #de935f;
+ color: #ffee99;
 }
 .syn-markup.syn-heading .syn-punctuation.syn-definition.syn-heading, .syn-entity.syn-name.syn-section {
- color: #81a2be;
-}
-.syn-keyword.syn-other.syn-unit {
- color: #de935f;
+ color: #ffb454;
 }
 .syn-markup.syn-bold, .syn-punctuation.syn-definition.syn-bold {
- color: #f0c674;
 font-weight: bold;
 }
 .syn-markup.syn-italic, .syn-punctuation.syn-definition.syn-italic {
- color: #b294bb;
 font-style: italic;
 }
-.syn-markup.syn-raw.syn-inline {
- color: #b5bd68;
-}
 .syn-string.syn-other.syn-link, .syn-punctuation.syn-definition.syn-string.syn-end.syn-markdown, .syn-punctuation.syn-definition.syn-string.syn-begin.syn-markdown {
- color: #cc6666;
+ color: #ff7733;
 }
 .syn-meta.syn-link {
- color: #de935f;
+ color: #ff7733;
 }
 .syn-markup.syn-list {
- color: #cc6666;
+ color: #b8cc52;
 }
 .syn-markup.syn-quote {
- color: #de935f;
+ color: #5c6773;
 }
 .syn-meta.syn-separator {
  color: #c5c8c6;
  background-color: #373b41;
 }
-.syn-markup.syn-inserted {
- color: #b5bd68;
-}
-.syn-markup.syn-deleted {
- color: #cc6666;
-}
-.syn-markup.syn-changed {
- color: #b294bb;
-}
 .syn-constant.syn-other.syn-color {
- color: #8abeb7;
+ color: #ffee99;
 }
 .syn-string.syn-regexp {
- color: #8abeb7;
-}
-.syn-constant.syn-character.syn-escape {
- color: #8abeb7;
-}
-.syn-punctuation.syn-section.syn-embedded, .syn-variable.syn-interpolation {
- color: #b294bb;
+ color: #ff7733;
 }
 .syn-invalid.syn-illegal {
  color: #ffffff;
